--- a/.github/workflows/Build-OnePlus-Kernel.yml
+++ b/.github/workflows/Build-OnePlus-Kernel.yml
@@ -245,7 +245,7 @@ jobs:
         run: |
          cd kernel_workspace/kernel_platform
          echo "CONFIG_KSU=y" >> ./common/arch/arm64/configs/gki_defconfig
-         echo "CONFIG_KSU_WITH_KPROBES=n" >> ./common/arch/arm64/configs/gki_defconfig
+         echo "CONFIG_KSU_VFS=y" >> ./common/arch/arm64/configs/gki_defconfig
          echo "CONFIG_KSU_SUSFS=y" >> ./common/arch/arm64/configs/gki_defconfig
          echo "CONFIG_KSU_SUSFS_HAS_MAGIC_MOUNT=y" >> ./common/arch/arm64/configs/gki_defconfig
          echo "CONFIG_KSU_SUSFS_SUS_PATH=y" >> ./common/arch/arm64/configs/gki_defconfig
@@ -262,36 +262,28 @@ jobs:
          echo "CONFIG_KSU_SUSFS_SPOOF_CMDLINE_OR_BOOTCONFIG=y" >> ./common/arch/arm64/configs/gki_defconfig
          echo "CONFIG_KSU_SUSFS_OPEN_REDIRECT=y" >> ./common/arch/arm64/configs/gki_defconfig
          echo "CONFIG_KSU_SUSFS_SUS_SU=n" >> ./common/arch/arm64/configs/gki_defconfig
-         echo "CONFIG_KSU_HOOK=y" >> ./common/arch/arm64/configs/gki_defconfig
          sed -i 's/check_defconfig//' ./common/build.config.gki
  
-      - name: KernelSUver
-        if: github.event.inputs.KERNEL_VER == 'default'
+      - name: Handle KernelSU Version
         run: |
-          if [[ "${{ github.event.inputs.kernelsu_variant }}" == "Next" ]]; then
-            cd kernel_workspace/kernel_platform/KernelSU-Next 
-            KSU_VERSION=$(( $(/usr/bin/git rev-list --count HEAD) + 10200 ))
-            echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
-            sed -i "s/DKSU_VERSION=11998/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
-          else
+         if [[ "${{ github.event.inputs.kernelsu_variant }}" == "Next" ]]; then
+            cd kernel_workspace/kernel_platform/KernelSU-Next
+            MAKE_FILE="kernel/Makefile"
+            DEFAULT_VERSION=11998  
+         else
             cd kernel_workspace/kernel_platform/KernelSU
-            KSU_VERSION=$(( $(/usr/bin/git rev-list --count HEAD) + 10200 ))
-            echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
-            sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
-          fi
+            MAKE_FILE="kernel/Makefile"
+            DEFAULT_VERSION=16    
+         fi
 
-      - name: Cust KernelSUver
-        if: github.event.inputs.KERNEL_VER != 'default'
-        run: |
-          if [[ "${{ github.event.inputs.kernelsu_variant }}" == "Next" ]]; then
-            cd kernel_workspace/kernel_platform/KernelSU-Next 
-            sed -i "s/DKSU_VERSION=11998/DKSU_VERSION=${{ github.event.inputs.KERNEL_VER }}/" kernel/Makefile
-            echo "KSUVER=${{ github.event.inputs.KERNEL_VER }}" >> $GITHUB_ENV
-          else
-            cd kernel_workspace/kernel_platform/KernelSU
-            sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${{ github.event.inputs.KERNEL_VER }}/" kernel/Makefile
-            echo "KSUVER=${{ github.event.inputs.KERNEL_VER }}" >> $GITHUB_ENV
-          fi
+         if [[ "${{ github.event.inputs.KERNEL_VER }}" == "default" ]]; then
+            KSU_VERSION=$(( $(git rev-list --count HEAD) + 10200 ))
+         else
+            KSU_VERSION=${{ github.event.inputs.KERNEL_VER }}
+         fi
+    
+         sed -i "s/DKSU_VERSION=${DEFAULT_VERSION}/DKSU_VERSION=${KSU_VERSION}/" "${MAKE_FILE}"
+         echo "KSUVER=${KSU_VERSION}" >> $GITHUB_ENV
 
       - name: Add make name
         run: |
