--- a/.github/workflows/Build-OnePlus-Kernel.yml
+++ b/.github/workflows/Build-OnePlus-Kernel.yml
@@ -170,9 +170,9 @@ jobs:
           cp ../../kernel_patches4mksu/69_hide_stuff.patch ./
           patch -p1 -F 3 < 69_hide_stuff.patch
            
-          if [ "${{ github.event.inputs.kernelsu_variant }}" == "KSUN" ]; then
+          if [ "${{ github.event.inputs.kernelsu_variant }}" == "Next" ]; then
             cp ../../kernel_patches4mksu/next/syscall_hooks.patch ./
-            patch -p1 --forward < syscall_hooks.patch || true
+            patch -p1 -F 3 < syscall_hooks.patch
           elif [ "${{ github.event.inputs.kernelsu_variant }}" == "SKSU" || "${{ github.event.inputs.kernelsu_variant }}" == "MKSU" ]; then
             cp ../../kernel_patches4mksu/hooks/new_hooks.patch ./
             patch -p1 -F 3 < new_hooks.patch
@@ -183,7 +183,7 @@ jobs:
         run: |
          cd kernel_workspace/kernel_platform
 
-         if [ "${{ github.event.inputs.kernelsu_variant }}" == "Next" ]; then
+         if [ "${{ github.event.inputs.kernelsu_variant }}" == "Next" || "${{ github.event.inputs.kernelsu_variant }}" == "MKSU" ]; then
             echo "CONFIG_KSU_WITH_KPROBES=n" >> ./common/arch/arm64/configs/gki_defconfig
          elif [ "${{ github.event.inputs.kernelsu_variant }}" == "SKSU" ]; then
             echo "CONFIG_KSU_VFS=y" >> ./common/arch/arm64/configs/gki_defconfig
