--- a/.github/workflows/Build-OnePlus-Kernel.yml
+++ b/.github/workflows/Build-OnePlus-Kernel.yml
@@ -171,7 +171,7 @@ jobs:
           patch -p1 -F 3 < 69_hide_stuff.patch
            
       - name: Apply New Hooks Patches
-        if: ${{ github.event.inputs.VFS_patch_ENABLED == 'enable' }}
+        if: ${{ github.event.inputs.SUSFS_ENABLED == 'true' }}
         run: |
          cd kernel_workspace/kernel_platform/common
          if [ "${{ github.event.inputs.kernelsu_variant }}" == "Next" ]; then
