--- a/.github/workflows/Build-OnePlus-Kernel.yml
+++ b/.github/workflows/Build-OnePlus-Kernel.yml
@@ -174,13 +174,13 @@ jobs:
         if: ${{ github.event.inputs.SUSFS_ENABLED == 'true' }}
         run: |
          cd kernel_workspace/kernel_platform/common
-         if [ "${{ github.event.inputs.kernelsu_variant }}" == "Next" ]; then
+         if [ "${{ github.event.inputs.kernelsu_variant }}" = "Next" ]; then
             cp ../../kernel_patches4mksu/next/syscall_hooks.patch ./
             patch -p1 -F 3 < syscall_hooks.patch
-          elif [ "${{ github.event.inputs.kernelsu_variant }}" == "SKSU" || "${{ github.event.inputs.kernelsu_variant }}" == "MKSU" ]; then
+         elif [ "${{ github.event.inputs.kernelsu_variant }}" = "SKSU" ] || [ "${{ github.event.inputs.kernelsu_variant }}" = "MKSU" ]; then
             cp ../../kernel_patches4mksu/hooks/new_hooks.patch ./
             patch -p1 -F 3 < new_hooks.patch
-          fi
+         fi
           
       - name: Add SUSFS Configuration Settings
         if: github.event.inputs.SUSFS_ENABLED == 'true'
