--- a/.github/workflows/Build-ksunext-PadPro-SUSFS.yml
+++ b/.github/workflows/Build-ksunext-PadPro-SUSFS.yml
@@ -18,6 +18,10 @@ on:
         description: "内核安卓版本"
         required: true
         default: 'android14'
+      KERNEL_NAME:
+        description: "修改内核名称"
+        required: true
+        default: '-android14-11-o-gfc2eac419e6e'
       KERNEL_VERSION:
         description: "内核版本"
         required: true
